refacto(Home): Layout / Prevent overlap of first section for lower resolutions

--- a/style.css
+++ b/style.css
@@ -3,9 +3,11 @@
   margin: 0px;
   color: white;
 }
+
 html {
   scroll-behavior: smooth;
 }
+
 body {
   background-color: rgb(30, 30, 30);
   max-width: 100vw;
@@ -14,9 +16,10 @@ body {
 
 .top-section {
   background: url(img/bg1.jpg) no-repeat center center/cover;
-  height: 100vh;
+  min-height: 100vh;
   margin-bottom: 50px;
 }
+
 #navbar {
   position: sticky;
   top: 10px;
@@ -26,6 +29,7 @@ body {
   align-items: center;
   /* justify-content: center; */
 }
+
 /* #navbar::before {
   content: "";
   position: absolute;
@@ -40,10 +44,12 @@ body {
   align-items: center;
   width: 500px;
 }
+
 #navbar ul li {
   font-size: 1.1rem;
   list-style: none;
 }
+
 #navbar ul li a {
   font-family: "Baloo 2", cursive;
   color: black;
@@ -53,11 +59,13 @@ body {
   padding: 0px 10px;
   border-radius: 12px;
 }
+
 #navbar ul li a:hover {
   color: black;
   background-color: rgb(220, 132, 61);
   transition: all 0.3s ease;
 }
+
 #logo img {
   margin: 10px 10px;
   width: 60px;
@@ -72,14 +80,18 @@ body {
   flex-direction: column;
   align-items: center;
   color: azure;
-  margin: 190px 0px;
+  margin-top: 190px;
+  /*Navbar height*/
+  margin-bottom: 85px;
   align-items: center;
   height: 390px;
   width: 100%;
 }
+
 .home-con {
   width: 80%;
 }
+
 #watch-container {
   display: flex;
   flex-wrap: wrap;
@@ -98,12 +110,14 @@ body {
   align-items: center;
   text-align: center;
 }
+
 .box a {
   font-family: "Abel", sans-serif;
   color: antiquewhite;
   margin-top: 10px;
   text-decoration: none;
 }
+
 .box:hover {
   transform: scale(1.08);
   transition: transform 0.2s ease-out, box-shadow 0.2s ease-out;
@@ -126,6 +140,7 @@ body {
   opacity: 0.8;
   object-fit: cover;
 }
+
 #watch h2 {
   text-align: center;
   font-family: "Rubik Distressed", cursive;
@@ -139,6 +154,7 @@ body {
   .top-section {
     height: 80vh;
   }
+
   #navbar {
     justify-content: center;
   }
